--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-country-flag": "^3.1.0",
+    "react-dom": "^18.2.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.7",
